--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,59 @@
+/* ASSETS */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+html, body {
+    margin: 0%;
+    padding: 0%;
+}
+
 /* HEADER STYLES */
+.header-container {
+    background-color: whitesmoke;
+    text-align: center;
+    padding: 1%;
+    font-family: 'Bebas Neue';
+    font-size: 3.5em;
+    font-weight: bolder;
+    letter-spacing: 5px;
+}
 
 /* MAIN STYLES */
+.game-board {
+    width: 400px;
+    height: 400px;
+    background-color: grey;
+    margin: 0 auto;
+    margin-top: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.squares-for-letters {
+    margin: 1.5px;
+    width: calc(100% / 6); /* need 5 letters per row - because 5 letter word (use 6 to account for margins and other spacing) */
+    height: calc(100% / 7); /* need 6 rows - because 6 guesses (use 7 to account for margins and other spacing) */
+    border: 3px solid black;
+    text-align: center;
+}
+
+.letter {
+    margin-top: 12px;
+    font-family: 'Bebas Neue';
+    font-size: 2em;
+}
+
 
 /* FOOTER STYLES */
+.footer-container {
+    background-color: whitesmoke;
+    text-align: center;
+    padding: 1%;
+    font-family: 'Bebas Neue';
+    font-size: 1.5em;
+    position: absolute;
+    font-weight: bolder;
+    bottom: 0;
+    width: 100%;
+}
